--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "alertifyjs": "^1.13.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
